--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             find out myself, but I want to put those few things out there. I 
             encourage you to check it out, maybe bookmark some of the posts if 
             they are something you work with.</p>
-          <p><a href="http://blog.256design.com">> 256 Blog</a><p>
+          <p><a href="http://256design.com/blog">> 256 Blog</a><p>
         </div>
         <div class="grid_4">
           <p>Programming isn't just a job, it's a mindset. I am passionate 
